--- a/src/pages/test/[...certificacion]/index.astro
+++ b/src/pages/test/[...certificacion]/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../../components/FormattedDate.astro';
 
-const posts = (await getCollection('architect')).sort(
+const posts = (await getCollection('compute')).sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 
@@ -22,7 +22,9 @@ export const getStaticPaths = (() => {
     return [
         {params : { certificacion : 'aws-solutions-architect'}},
         {params : { certificacion : 'aws-developer-associate'}},
-        {params : { certificacion : 'linux-professional-institute'}}
+        {params : { certificacion : 'linux-professional-institute'}},
+		{params : { certificacion : 'computer-science'}}
+
     ];
 }) satisfies GetStaticPaths;
 
