--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -110,6 +110,12 @@ import FormattedDate from '../../components/FormattedDate.astro';
                             <h4 class="title">Linux Professional Institute</h4>
                         </a>
                     </li>
+					<li>
+                        <a href={`/test/computer-science`}>
+                            <img width={720} height={360} src="/blog-placeholder-3.jpg" alt="" />
+                            <h4 class="title">Computación general</h4>
+                        </a>
+                    </li>
 				</ul>
 			</section>
 		</main>
