--- a/src/pages/test/[...certificacion]/index.astro
+++ b/src/pages/test/[...certificacion]/index.astro
@@ -4,7 +4,6 @@ import type { GetStaticPaths } from "astro";
 
 
 const {certificacion} = Astro.params
-console.log(certificacion)
 
 import BaseHead from '../../../components/BaseHead.astro';
 import Header from '../../../components/Header.astro';
@@ -13,7 +12,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../../components/FormattedDate.astro';
 
-const tema = 'linux'
+const tema = 'compute'
 
 const posts = (await getCollection(tema)).sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
@@ -25,7 +24,9 @@ export const getStaticPaths = (() => {
         {params : { certificacion : 'aws-solutions-architect'}},
         {params : { certificacion : 'aws-developer-associate'}},
         {params : { certificacion : 'linux-professional-institute'}},
-		{params : { certificacion : 'computer-science'}}
+		{params : { certificacion : 'computer-science'}},
+		{params : { certificacion : 'sistemas-operativos'}}
+
 
     ];
 }) satisfies GetStaticPaths;
@@ -37,6 +38,13 @@ export const getStaticPaths = (() => {
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
+.foto {
+  border-width: 4px;
+  border-style: solid;
+  border-image: linear-gradient(to right, darkblue, darkorchid) 1;
+  border-radius:10px
+}
+			
 			main {
 				width: 960px;
 			}
@@ -115,7 +123,7 @@ export const getStaticPaths = (() => {
 						posts.map((post) => (
 							<li>
 								<a href={`/test/${certificacion}/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
+									<img class="foto" width={720} height={260} src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
 								</a>
 							</li>
