--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -104,6 +104,14 @@ import FormattedDate from '../../components/FormattedDate.astro';
             
                         </a>
                     </li>
+					<li>
+                        <a href={`/test/programacion`}>
+                            <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
+                            <h4 class="title">Programación en C</h4>
+            
+                        </a>
+                    </li>
+					
                     <li>
                         <a href={`/test/aws-developer-associate`}>
                             <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
