--- a/src/pages/test/[...certificacion]/index.astro
+++ b/src/pages/test/[...certificacion]/index.astro
@@ -12,7 +12,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../../components/FormattedDate.astro';
 
-const tema = 'programacion'
+const tema = 'compute'
 
 const posts = (await getCollection(tema)).sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
