--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -118,6 +118,13 @@ import FormattedDate from '../../components/FormattedDate.astro';
             
                         </a>
                     </li>
+					<li>
+                        <a href={`/test/typescript`}>
+                            <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
+                            <h4 class="title">Javascript</h4>
+            
+                        </a>
+                    </li>
 					
                     <li>
                         <a href={`/test/aws-developer-associate`}>
