--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -98,14 +98,14 @@ import FormattedDate from '../../components/FormattedDate.astro';
 			<section>
 				<ul>
 					<li>
-                        <a href={`/test/aws-solutions-architect`}>
+                        <a href={`/test/aws-architect`}>
                             <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
                             <h4 class="title">AWS Solutions Architect Associate</h4>
             
                         </a>
                     </li>
 					<li>
-                        <a href={`/test/programacion`}>
+                        <a href={`/test/programacion-c`}>
                             <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
                             <h4 class="title">Programación en C</h4>
             
@@ -127,20 +127,20 @@ import FormattedDate from '../../components/FormattedDate.astro';
                     </li>
 					
                     <li>
-                        <a href={`/test/aws-developer-associate`}>
+                        <a href={`/test/aws-developer`}>
                             <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
                             <h4 class="title">AWS Developer Associate</h4>
             
                         </a>
                     </li>
                     <li>
-                        <a href={`/test/linux-professional-institute`}>
+                        <a href={`/test/linux`}>
                             <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
                             <h4 class="title">Linux Professional Institute</h4>
                         </a>
                     </li>
 					<li>
-                        <a href={`/test/computer-science`}>
+                        <a href={`/test/computacion`}>
                             <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
                             <h4 class="title">Computación general</h4>
                         </a>
