--- a/src/pages/test/[...certificacion]/index.astro
+++ b/src/pages/test/[...certificacion]/index.astro
@@ -10,29 +10,28 @@ import Header from '../../../components/Header.astro';
 import Footer from '../../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../../consts';
 import { getCollection } from 'astro:content';
+import FormattedDate from '../../../components/FormattedDate.astro';
 
+const tema = 'programacion'
 
-// .sort(
-// 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-
-const tema = certificacion
-
-const posts = (await getCollection(tema));
-
-console.log(posts)
-
+const posts = (await getCollection(tema)).sort(
+	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+);
 
 
 export const getStaticPaths = (() => {
     return [
 		{params : { certificacion : 'javascript'}},
 		{params : { certificacion : 'typescript'}},
-        {params : { certificacion : 'aws-architect'}},
-        {params : { certificacion : 'aws-developer'}},
-        {params : { certificacion : 'linux'}},
-		{params : { certificacion : 'computacion'}},
+        {params : { certificacion : 'aws-solutions-architect'}},
+        {params : { certificacion : 'aws-developer-associate'}},
+        {params : { certificacion : 'linux-professional-institute'}},
+		{params : { certificacion : 'computer-science'}},
 		{params : { certificacion : 'sistemas-operativos'}},
-		{params : { certificacion : 'programacion-c'}}
+		{params : { certificacion : 'programacion'}}
+
+
+
     ];
 }) satisfies GetStaticPaths;
 
