--- a/src/pages/blog/hardware/[slug].astro
+++ b/src/pages/blog/hardware/[slug].astro
@@ -1,15 +1,17 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
+import BlogPost from '../../../layouts/BlogPost.astro';
+
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
+	const posts = await getCollection('computacion');
 	return posts.map((post) => ({
 		params: { slug: post.slug },
 		props: post,
 	}));
 }
-type Props = CollectionEntry<'blog'>;
+
+type Props = CollectionEntry<'computacion'>;
 
 const post = Astro.props;
 const { Content } = await post.render();
