--- a/src/pages/blog/javascript/index.astro
+++ b/src/pages/blog/javascript/index.astro
@@ -10,30 +10,20 @@ import Header from '../../../components/Header.astro';
 import Footer from '../../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../../consts';
 import { getCollection } from 'astro:content';
-import FormattedDate from '../../../components/FormattedDate.astro';
 
-const tema = 'javascript'
+const tema ='javascript'
 
 const posts = (await getCollection(tema)).sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 
 
-export const getStaticPaths = (() => {
-    return [
-		{params : { certificacion : 'javascript'}},
-		{params : { certificacion : 'typescript'}},
-        {params : { certificacion : 'aws-solutions-architect'}},
-        {params : { certificacion : 'aws-developer-associate'}},
-        {params : { certificacion : 'linux-professional-institute'}},
-		{params : { certificacion : 'computer-science'}},
-		{params : { certificacion : 'sistemas-operativos'}},
-		{params : { certificacion : 'programacion'}}
-
-
-
-    ];
-}) satisfies GetStaticPaths;
+// export const getStaticPaths = (() => {
+//     return [
+// 		{params : { certificacion : 'typescript'}},
+       
+//     ];
+// }) satisfies GetStaticPaths;
 
 ---
 
@@ -125,7 +115,7 @@ export const getStaticPaths = (() => {
 					{
 						posts.map((post) => (
 							<li>
-								<a href={`/test/${certificacion}/${post.slug}/`}>
+								<a href={`/blog/javascript/${post.slug}/`}>
 									<img class="foto" width={720} height={260} src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
 								</a>
