--- a/src/components/css/linkLateral.css
+++ b/src/components/css/linkLateral.css
@@ -1,11 +1,11 @@
 .postPrevio,
 .postSiguiente {
-    writing-mode: vertical-lr;
+    writing-mode: vertical-rl;
     color: #26495c;
     position: fixed;
     top: 50%;
     transform: translateY(-50%);
-    height: 350px;
+    height: 500px;
     font-size: 30px;
     z-index: 20;
     transition:0.5s
@@ -39,81 +39,6 @@
     text-decoration: none;
 }
 
-.fotoPrevio,
-.fotoSiguiente {
-    height: 350px;
-    width: 450px;
-    position: relative;
-}
-
-
-.fotoPrevio img,
-.fotoSiguiente img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.fotoPrevio img {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.fotoSiguiente img {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-
-.tarjetaPrevio,
-.tarjetaSiguiente {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    align-items: center;
-    justify-content: center;
-    writing-mode: horizontal-tb;
-    width: 70%;
-    inset: 0px;
-    margin: auto;
-    z-index: 10;
-}
-
-.linkCaja{
-    padding: 8px 16px;
-    border-radius:2px;
-    background-color: rgba(38, 73, 92, 0.3);
-    color:white
-}
-
-.tarjetaPrevio h3,
-.tarjetaSiguiente h3 {
-    text-align: center
-}
-
-
-.tarjetaPrevio button,
-.tarjetaSiguiente button {
-    background-color: rgba(255, 255, 255, 0.6);
-    border-radius: 5px;
-    padding: 10px 20px;
-    color: #26495c;
-}
-
-.tituloPrevio,
-.tituloSiguiente,
-.smallLateral {
-    text-shadow: 1px 1px 10px rgba(0, 0, 0, 1);
-    color: white;
-}
-
-.smallLateral {
-    font-size: 16px;
-}
-
-
-.hidden {
-    display: none;
-}
 
 .postPrevio:hover,
 .postSiguiente:hover {
