--- a/src/pages/blog/javascript/[slug].astro
+++ b/src/pages/blog/javascript/[slug].astro
@@ -36,8 +36,8 @@ const { Content } = await post.render();
 	
 	<Content />
 </BlogPost>
-<LinkAnterior postAnterior={anterior[0]}/>
-<LinkPosterior postSiguiente={siguiente[0]}/>
+<LinkAnterior postAnterior={anterior[0]} certificacion={'javacript'}/>
+<LinkPosterior postSiguiente={siguiente[0]} certificacion={'javascript'}/>
 
 
 
