--- a/src/components/css/linkLateral.css
+++ b/src/components/css/linkLateral.css
@@ -5,13 +5,16 @@
     position: fixed;
     top: 50%;
     transform: translateY(-50%);
-    height: 500px;
-    font-size: 30px;
+    max-height: 400px;
+    padding: 24px 0 ;
+    text-align: center;
+    font-size: 24px;
     z-index: 20;
     transition:0.5s
 }
 
-.postPrevio:hover .linkPrevio {
+.postPrevio:hover .linkPrevio, 
+.postSiguiente:hover .linkSiguiente {
     color :white;
     transition: 0.5s;
 }
