--- a/src/pages/blog/algoritmos/[slug].astro
+++ b/src/pages/blog/algoritmos/[slug].astro
@@ -1,7 +1,8 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
 import BlogPost from '../../../layouts/BlogPost.astro';
-
+import LinkAnterior from '../../../components/LinkAnterior';
+import LinkPosterior from '../../../components/LinkPosterior';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('algoritmos');
@@ -11,12 +12,25 @@ export async function getStaticPaths() {
 	}));
 }
 
+const post = Astro.props;
+
+const todos = await getCollection('algoritmos')
+const siguiente = todos.filter((p)=>{
+ 	return p.data.id === (post.data.id +1)
+})
+
+const anterior = todos.filter((p)=>{
+ 	return p.data.id === (post.data.id -1)
+})
+
 type Props = CollectionEntry<'algoritmos'>;
 
-const post = Astro.props;
 const { Content } = await post.render();
 ---
 
 <BlogPost {...post.data}>
 	<Content />
 </BlogPost>
+
+<LinkAnterior postAnterior={anterior[0]} certificacion={'algoritmos'}/>
+<LinkPosterior postSiguiente={siguiente[0]} certificacion={'algoritmos'}/>
