--- a/src/pages/blog/programacion-c/[slug].astro
+++ b/src/pages/blog/programacion-c/[slug].astro
@@ -1,7 +1,8 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
 import BlogPost from '../../../layouts/BlogPost.astro';
-
+import LinkAnterior from '../../../components/LinkAnterior';
+import LinkPosterior from '../../../components/LinkPosterior';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('programacion-c');
@@ -11,12 +12,31 @@ export async function getStaticPaths() {
 	}));
 }
 
+const post = Astro.props;
+ 
+
+const todos = await getCollection('programacion-c')
+const siguiente = todos.filter((p)=>{
+ 	return p.data.id === (post.data.id +1)
+})
+
+const anterior = todos.filter((p)=>{
+ 	return p.data.id === (post.data.id -1)
+})
+
+console.log(todos[0])
+// console.log(todos[0].data.id, post.data.id +1)
+console.log(siguiente)
+console.log(anterior)
+
 type Props = CollectionEntry<'programacion-c'>;
 
-const post = Astro.props;
 const { Content } = await post.render();
 ---
 
 <BlogPost {...post.data}>
 	<Content />
 </BlogPost>
+
+<LinkAnterior postAnterior={anterior[0]} certificacion={'programacion-c'}/>
+<LinkPosterior postSiguiente={siguiente[0]} certificacion={'programacion-c'}/>
