--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -119,9 +119,9 @@ import FormattedDate from '../../components/FormattedDate.astro';
                         </a>
                     </li>
 					<li>
-                        <a href={`/blog/typescript`}>
+                        <a href={`/blog/desarrollo-web`}>
                             <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
-                            <h4 class="title">Javascript</h4>
+                            <h4 class="title">Desarrollo web</h4>
             
                         </a>
                     </li>
