añadido node http module

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -133,6 +133,14 @@ import FormattedDate from '../../components/FormattedDate.astro';
             
                         </a>
                     </li>
+
+					<li>
+                        <a href={`/blog/react`}>
+                            <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
+                            <h4 class="title">React</h4>
+            
+                        </a>
+                    </li>
                     <li>
                         <a href={`/blog/linux`}>
                             <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
