--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -104,6 +104,14 @@ import FormattedDate from '../../components/FormattedDate.astro';
             
                         </a>
                     </li>
+
+					<li>
+                        <a href={`/blog/web`}>
+                            <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
+                            <h4 class="title">Web</h4>
+            
+                        </a>
+                    </li>
 					<li>
                         <a href={`/blog/programacion-c`}>
                             <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
