--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,8 +41,10 @@ const today = new Date();
 </footer>
 <style>
 	footer {
+		border-top: 2px solid black;
+		max-width: calc(100% - 2em);
+		margin: auto;
 		padding: 2em 1em 6em 1em;
-		background: linear-gradient(var(--gray-gradient)) no-repeat;
 		color: rgb(var(--gray));
 		text-align: center;
 	}
