--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,12 +3,7 @@ import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
 
-// const posts = (await getCollection('blog')).sort(
-// 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-// );
 ---
 
 <!doctype html>
@@ -16,161 +11,106 @@ import FormattedDate from '../../components/FormattedDate.astro';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
-			main {
-				width: 960px;
+			ul li {
+				height: 250px;
+				transition:0.3s
+			}
+			li a h4{
+				margin-bottom:0px
 			}
 
-			.foto{
-				border-width: 4px;
-				border-style: solid;
-				border-image: linear-gradient(to right, darkblue, darkorchid) 1;
-				border-radius:10px
+			ul li:hover{
+				transform:translateY(-6px)
 			}
-			ul {
+
+			/* ul li{
 				display: flex;
-				flex-wrap: wrap;
-				gap: 2rem;
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
+				flex-direction: column;
+			} */
+
+			li img{
+				height: 70%;
 			}
-			ul li {
-				width: calc(50% - 1rem);
-			}
-			ul li * {
-				text-decoration: none;
-				transition: 0.2s ease;
-			}
-			ul li:first-child {
-				width: 100%;
-				margin-bottom: 1rem;
-				text-align: center;
-			}
-			ul li:first-child img {
-				width: 100%;
-			}
-			ul li:first-child .title {
-				font-size: 2.369rem;
-			}
-			ul li img {
-				margin-bottom: 0.5rem;
-				border-radius: 12px;
-			}
-			ul li a {
-				display: block;
-			}
-			.title {
-				margin: 0;
-				color: rgb(var(--black));
-				line-height: 1;
-			}
-			.date {
-				margin: 0;
-				color: rgb(var(--gray));
-			}
-			ul li a:hover h4,
-			ul li a:hover .date {
-				color: rgb(var(--accent));
-			}
-			ul a:hover img {
-				box-shadow: var(--box-shadow);
-			}
-			@media (max-width: 720px) {
-				ul {
-					gap: 0.5em;
-				}
-				ul li {
-					width: 100%;
-					text-align: center;
-				}
-				ul li:first-child {
-					margin-bottom: 0;
-				}
-				ul li:first-child .title {
-					font-size: 1.563em;
-				}
-			}
+
+
+
 		</style>
 	</head>
 	<body>
 		<Header />
 		<main>
 			<section>
-				<ul>
-					<li>
+				<ul class="grid grid-cols-12 gap-6">
+					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/aws-architect`}>
-                            <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
-                            <h4 class="title">AWS Solutions Architect Associate</h4>
-            
+                            <img class="foto" src="/aws-architect.png" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200">AWS Architect</h4>
                         </a>
                     </li>
 
-					<li>
+					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/web`}>
-                            <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
-                            <h4 class="title">Web</h4>
-            
+                            <img class="foto" src="/aws-architect.png" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Web</h4>
                         </a>
                     </li>
-					<li>
+					<li class="col-span-3  border border-2 border-black">
                         <a href={`/blog/programacion-c`}>
-                            <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
-                            <h4 class="title">Programación en C</h4>
-            
+                            <img class="foto" src="/aws-architect.png" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Programación en C</h4>
                         </a>
                     </li>
-					<li>
+					<li class="col-span-3  border border-2 border-black">
                         <a href={`/blog/javascript`}>
-                            <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
-                            <h4 class="title">Javascript</h4>
-            
+                            <img class="foto" src="/aws-architect.png" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Javascript</h4>
                         </a>
                     </li>
-					<li>
+					<li class="col-span-3  border border-2 border-black">
                         <a href={`/blog/desarrollo-web`}>
-                            <img class="foto" width={720} height={500} src="/aws-architect.png" alt="" />
-                            <h4 class="title">Desarrollo web</h4>
+                            <img class="foto" src="/aws-architect.png" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Desarrollo web</h4>
             
                         </a>
                     </li>
 					
-                    <li>
+                    <li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/aws-developer`}>
-                            <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title">AWS Developer Associate</h4>
+                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">AWS Developer</h4>
             
                         </a>
                     </li>
 
-					<li>
+					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/react`}>
-                            <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title">React</h4>
+                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">React</h4>
             
                         </a>
                     </li>
-                    <li>
+                    <li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/linux`}>
-                            <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title">Linux Professional Institute</h4>
+                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Linux</h4>
                         </a>
                     </li>
-					<li>
+					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/hardware`}>
-                            <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title">Computación general</h4>
+                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Computación general</h4>
                         </a>
                     </li>
-					<li>
+					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/sistemas-operativos`}>
-                            <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title">Sistemas operativos</h4>
+                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Sistemas operativos</h4>
                         </a>
                     </li>
-					<li>
+					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/algoritmos`}>
-                            <img class="foto" width={720} height={260} src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title">Algoritmos</h4>
+                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200"class="title">Algoritmos</h4>
                         </a>
                     </li>
 
