--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,6 +8,8 @@ import Layout from '../layouts/BlogPost.astro';
 	pubDate={new Date('August 08 2021')}
 	heroImage="/blog-placeholder-about.jpg"
 >
+
+	<img src="../larga.jpg" alt="">
 	<p>
 		¡Hola! Soy Alejandro, un fisioterapeuta apasionado por el movimiento humano y la salud, que decidió aventurarse en el fascinante mundo de la programación. Mi viaje comenzó como una necesidad de mejorar la manera en que gestionaba y optimizaba mis propios procesos de trabajo en la clínica, pero pronto se convirtió en una nueva pasión.	
 	</p>
