--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,9 +29,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				</p>
 			</div>
 			<div>
-				<img class="w-[100%]" src="../../main-img.jpg" alt="">
+				<img class="w-[100%]" src="../../principal.jpg" alt="">
 			</div>
-			
 		</main>
 		<Footer />
 	</body>
