--- a/src/pages/blog/web/index.astro
+++ b/src/pages/blog/web/index.astro
@@ -8,6 +8,7 @@ const {certificacion} = Astro.params
 import BaseHead from '../../../components/BaseHead.astro';
 import Header from '../../../components/Header.astro';
 import Footer from '../../../components/Footer.astro';
+import Prueba from "../../../components/prueba.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../../consts';
 import { getCollection } from 'astro:content';
 
@@ -23,41 +24,29 @@ const posts = (await getCollection(tema)).sort(
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<style>
-			.leccion:nth-child(3n + 1):hover{
-				background-color: rgb(233 213 255);
-			}
-			.leccion:nth-child(3n + 2):hover{
-				background-color: rgb(254 240 138);
-			}
-			.leccion:nth-child(3n):hover{
-				background-color: rgb(134 239 172);
-			}
-
-			li a h4{
-				margin:0
-			}
-			
-	
-		</style>
 	</head>
 	<body>
 		<Header />
 		<main>
-			<section class="w-5/6 m-auto ">
-				<ul class="grid grid-cols-4 gap-4">
+			<Prueba tema="web" foto="../../web.jpg" posts={posts} />
+			<!-- <section class="w-5/6 m-auto grid gap-4 grid-cols-4">
+				<img class="col-span-2 sticky top-[0px]" src="../../web.jpg" alt="">
+				<ul class="col-span-2">
 					{
 						posts.map((post) => (
-							<li class="leccion p-2 border-b-2 border-black col-span-2">
+							<li class="leccion p-2 border-b-2 border-black">
 								<a href={`/blog/web/${post.slug}/`}>
+								<div class="flex gap-4">
 									<h4 class="title">{post.data.title}</h4>
-									{/* <p>{post.data.description}</p> */}
+									<img class="w-[30px] object-cover" src="../../flecha-derecha.svg" alt=""/>
+								</div>
+									<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque earum libero dolor eligendi aspernatur architecto, provident, distinctio exercitationem doloribus debitis unde ullam vitae non eaque voluptate. Minima repellat qui dicta!</p>
 								</a>
 							</li>
 						))
 					}
 				</ul>
-			</section>
+			</section> -->
 		</main>
 		<Footer />
 	</body>
