--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,8 +32,9 @@ const today = new Date();
 		color:white;
 		/* max-width: calc(100% - 2em); */
 		margin: auto;
-		padding: 2em 1em 6em 1em;
+		padding: 2em 1em 2em 1em;
 		text-align: center;
+		z-index:10
 	}
 	.social-links {
 		display: flex;
