--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -61,22 +61,10 @@ const { title, description, updatedDate, heroImage } = Astro.props;
 		<Header />
 		<main>
 			<article>
-				<!-- <div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div> -->
+				<img src="/grid-bg.webp" class="w-screen object-cover h-screen top-0 opacity-10 fixed" alt="">
 				<div class="prose">
 					<div class="title">
-						<!-- <div class="date">
-							{
-								updatedDate && (
-									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
-									</div>
-								)
-							}
-						</div> -->
 						<h1>{title}</h1>
-						<hr />
 					</div>
 					<slot />
 				</div>
