--- a/src/components/prueba.astro
+++ b/src/components/prueba.astro
@@ -6,15 +6,24 @@
 ---
 
 <style>
-    .leccion:nth-child(3n + 1):hover{
-        background-color: rgb(233 213 255);
+    /* .leccion:nth-child(3n + 1):hover{
+        /* background-color: rgb(233 213 255); 
+        background-color: #ABD1C6;
     }
     .leccion:nth-child(3n + 2):hover{
-        background-color: rgb(254 240 138);
+        /* background-color: rgb(254 240 138); 
+        background-color: #F9BC60;
     }
     .leccion:nth-child(3n):hover{
         background-color: rgb(134 239 172);
-    }
+        background-color: #004643;
+    } */
+
+    .leccion:hover{
+        background-color: #ABD1C6;
+        } 
+
+
 
     li a h4{
         margin:0
