--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,9 +9,9 @@ import Layout from '../layouts/BlogPost.astro';
 	heroImage="/blog-placeholder-about.jpg"
 >
 
-	<img src="../larga.jpg" alt="">
+	<img class="mb-10" src="../larga.jpg" alt="">
 	<p>
-		¡Hola! Soy Alejandro, un fisioterapeuta apasionado por el movimiento humano y la salud, que decidió aventurarse en el fascinante mundo de la programación. Mi viaje comenzó como una necesidad de mejorar la manera en que gestionaba y optimizaba mis propios procesos de trabajo en la clínica, pero pronto se convirtió en una nueva pasión.	
+		¡Hola! Soy Alejandro, un fisioterapeuta que decidió aventurarse en el fascinante mundo de la programación. Mi viaje comenzó como una necesidad de mejorar la manera en que gestionaba y optimizaba mis propios procesos de trabajo en la clínica, pero pronto se convirtió en una nueva pasión.	
 	</p>
 	<p>
 		Este blog es el resultado de horas y horas de estudio, práctica y, por supuesto, errores que me han enseñado valiosas lecciones. Aquí comparto todas las notas, apuntes y guías que he recopilado a lo largo de mi aprendizaje. Mi objetivo es ofrecer recursos claros y útiles para quienes están empezando, así como para aquellos que buscan profundizar en temas específicos.	
