--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
 		<Header />
-		<main class="flex gap-8 items-center justify-between">
+		<main class="flex gap-8 items-center mb-12 justify-between">
 			<div>
 				<h1>Hello, Astronaut!</h1>
 				<p>
