--- a/src/components/prueba.astro
+++ b/src/components/prueba.astro
@@ -1,30 +1,8 @@
-
-
 ---
     const { foto, tema, posts } = Astro.props
-
 ---
 
 <style>
-    /* .leccion:nth-child(3n + 1):hover{
-        /* background-color: rgb(233 213 255); 
-        background-color: #ABD1C6;
-    }
-    .leccion:nth-child(3n + 2):hover{
-        /* background-color: rgb(254 240 138); 
-        background-color: #F9BC60;
-    }
-    .leccion:nth-child(3n):hover{
-        background-color: rgb(134 239 172);
-        background-color: #004643;
-    } */
-
-    .leccion:hover{
-        background-color: #ABD1C6;
-        } 
-
-
-
     li a h4{
         margin:0
     }
@@ -42,18 +20,17 @@
 
 
 <div>
-    <section class="w-5/6 m-auto grid gap-4 grid-cols-4">
+    <section class="h-screen m-auto grid gap-4 grid-cols-4">
         <img class="col-span-2 sticky top-[0px]" src={foto} alt="">
         <ul class="col-span-2">
             {
                 posts.map((post) => (
-                    <li class="leccion p-2 border-b-2 border-black">
+                    <li class="leccion p-2 border-b w-full hover:bg-gray-900 border-black">
                         <a href={`/blog/${tema}/${post.slug}/`}>
-                        <div class="flex gap-4">
-                            <h4 class="title">{post.data.title}</h4>
+                        <div class="flex justify-between items-center gap-4">
+                            <h4 class="">{post.data.title}</h4>
                             <img class="w-[30px] object-cover" src='../../flecha-derecha.svg' alt=""/>
                         </div>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque earum libero dolor eligendi aspernatur architecto, provident, distinctio exercitationem doloribus debitis unde ullam vitae non eaque voluptate. Minima repellat qui dicta!</p>
                         </a>
                     </li>
                 ))
